added new file and made some changes in index.html file

--- a/about-us.html
+++ b/about-us.html
@@ -6,7 +6,7 @@
     <title>Simple Web Page</title>
 </head>
 <body>
-    <h1>Welcome to The First Page of The Webpage</h1>
+    <h1>Welcome to My Webpage</h1>
     <p>This is a paragraph of text to give you a warm welcome to my site. Here you will find basic HTML elements in action.</p>
     <img src="https://via.placeholder.com/150" alt="Placeholder Image">
 </body>
